fix 1px gap between header

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -79,8 +79,7 @@
 
   // Primary logo
   &__wordmark {
-    display: inline-block;
-    vertical-align: middle;
+    display: block;
     margin: 0 auto;
     width: 129px;
     height: 14px;
